antlr/CalculatorParser.py
# Generated from Calculator.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing import TextIO
import sys




class CalculatorParser ( Parser ):

    grammarFileName = "Calculator.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'!'", "<INVALID>", "'='", "','", "'+'", 
                     "'-'", "'*'", "'/'", "'const'", "'def'", "'('", "')'", 
                     "'echo'", "'\n'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "NUMBER", "ASSIGN_OP", "COMMA", 
                      "ADD_OP", "SUB_OP", "MUL_OP", "DIV_OP", "CONST", "DEF", 
                      "PAREN_OPEN", "PAREN_CLOSE", "ECHO", "NL", "IDENTIFIER", 
                      "WHITESPACE", "COMMENT" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_command = 2
    RULE_functionDeclaration = 3
    RULE_signature = 4
    RULE_functionParameters = 5
    RULE_variableDeclaration = 6
    RULE_constantDeclaration = 7
    RULE_expression = 8
    RULE_multiplicativeExpression = 9
    RULE_multiplicativeOperator = 10
    RULE_additiveExpression = 11
    RULE_additiveOperator = 12
    RULE_primaryExpression = 13
    RULE_parenthesizedExpression = 14
    RULE_functionExpression = 15
    RULE_functionArguments = 16
    RULE_variableExpression = 17
    RULE_literalExpression = 18

    ruleNames =  [ "program", "statement", "command", "functionDeclaration", 
                   "signature", "functionParameters", "variableDeclaration", 
                   "constantDeclaration", "expression", "multiplicativeExpression", 
                   "multiplicativeOperator", "additiveExpression", "additiveOperator", 
                   "primaryExpression", "parenthesizedExpression", "functionExpression", 
                   "functionArguments", "variableExpression", "literalExpression" ]

    EOF = Token.EOF
    T__0=1
    NUMBER=2
    ASSIGN_OP=3
    COMMA=4
    ADD_OP=5
    SUB_OP=6
    MUL_OP=7
    DIV_OP=8
    CONST=9
    DEF=10
    PAREN_OPEN=11
    PAREN_CLOSE=12
    ECHO=13
    NL=14
    IDENTIFIER=15
    WHITESPACE=16
    COMMENT=17

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CalculatorParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CalculatorParser.StatementContext)
            else:
                return self.getTypedRuleContext(CalculatorParser.StatementContext,i)


        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(CalculatorParser.NL)
            else:
                return self.getToken(CalculatorParser.NL, i)

        def getRuleIndex(self):
            return CalculatorParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = CalculatorParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 38
                self.statement()
                self.state = 39
                self.match(CalculatorParser.NL)
                self.state = 43 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CalculatorParser.T__0) | (1 << CalculatorParser.NUMBER) | (1 << CalculatorParser.CONST) | (1 << CalculatorParser.DEF) | (1 << CalculatorParser.PAREN_OPEN) | (1 << CalculatorParser.IDENTIFIER))) != 0)):
                    break

            self.state = 45
            self.match(CalculatorParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def command(self):
            return self.getTypedRuleContext(CalculatorParser.CommandContext,0)


        def functionDeclaration(self):
            return self.getTypedRuleContext(CalculatorParser.FunctionDeclarationContext,0)


        def variableDeclaration(self):
            return self.getTypedRuleContext(CalculatorParser.VariableDeclarationContext,0)


        def constantDeclaration(self):
            return self.getTypedRuleContext(CalculatorParser.ConstantDeclarationContext,0)


        def expression(self):
            return self.getTypedRuleContext(CalculatorParser.ExpressionContext,0)


        def getRuleIndex(self):
            return CalculatorParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = CalculatorParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 52
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 47
                self.command()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 48
                self.functionDeclaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 49
                self.variableDeclaration()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 50
                self.constantDeclaration()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 51
                self.expression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommandContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(CalculatorParser.IDENTIFIER, 0)

        def functionArguments(self):
            return self.getTypedRuleContext(CalculatorParser.FunctionArgumentsContext,0)


        def getRuleIndex(self):
            return CalculatorParser.RULE_command

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommand" ):
                listener.enterCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommand" ):
                listener.exitCommand(self)




    def command(self):

        localctx = CalculatorParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_command)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(CalculatorParser.T__0)
            self.state = 55
            self.match(CalculatorParser.IDENTIFIER)
            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CalculatorParser.PAREN_OPEN:
                self.state = 56
                self.functionArguments()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEF(self):
            return self.getToken(CalculatorParser.DEF, 0)

        def signature(self):
            return self.getTypedRuleContext(CalculatorParser.SignatureContext,0)


        def ASSIGN_OP(self):
            return self.getToken(CalculatorParser.ASSIGN_OP, 0)

        def expression(self):
            return self.getTypedRuleContext(CalculatorParser.ExpressionContext,0)


        def getRuleIndex(self):
            return CalculatorParser.RULE_functionDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDeclaration" ):
                listener.enterFunctionDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDeclaration" ):
                listener.exitFunctionDeclaration(self)




    def functionDeclaration(self):

        localctx = CalculatorParser.FunctionDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_functionDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(CalculatorParser.DEF)
            self.state = 60
            self.signature()
            self.state = 61
            self.match(CalculatorParser.ASSIGN_OP)
            self.state = 62
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SignatureContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(CalculatorParser.IDENTIFIER, 0)

        def functionParameters(self):
            return self.getTypedRuleContext(CalculatorParser.FunctionParametersContext,0)


        def getRuleIndex(self):
            return CalculatorParser.RULE_signature

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSignature" ):
                listener.enterSignature(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSignature" ):
                listener.exitSignature(self)




    def signature(self):

        localctx = CalculatorParser.SignatureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_signature)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(CalculatorParser.IDENTIFIER)
            self.state = 66
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CalculatorParser.PAREN_OPEN:
                self.state = 65
                self.functionParameters()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionParametersContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PAREN_OPEN(self):
            return self.getToken(CalculatorParser.PAREN_OPEN, 0)

        def PAREN_CLOSE(self):
            return self.getToken(CalculatorParser.PAREN_CLOSE, 0)

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(CalculatorParser.IDENTIFIER)
            else:
                return self.getToken(CalculatorParser.IDENTIFIER, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CalculatorParser.COMMA)
            else:
                return self.getToken(CalculatorParser.COMMA, i)

        def getRuleIndex(self):
            return CalculatorParser.RULE_functionParameters

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionParameters" ):
                listener.enterFunctionParameters(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionParameters" ):
                listener.exitFunctionParameters(self)




    def functionParameters(self):

        localctx = CalculatorParser.FunctionParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_functionParameters)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(CalculatorParser.PAREN_OPEN)
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CalculatorParser.IDENTIFIER:
                self.state = 69
                self.match(CalculatorParser.IDENTIFIER)
                self.state = 74
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==CalculatorParser.COMMA:
                    self.state = 70
                    self.match(CalculatorParser.COMMA)
                    self.state = 71
                    self.match(CalculatorParser.IDENTIFIER)
                    self.state = 76
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 79
            self.match(CalculatorParser.PAREN_CLOSE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(CalculatorParser.IDENTIFIER, 0)

        def ASSIGN_OP(self):
            return self.getToken(CalculatorParser.ASSIGN_OP, 0)

        def expression(self):
            return self.getTypedRuleContext(CalculatorParser.ExpressionContext,0)


        def getRuleIndex(self):
            return CalculatorParser.RULE_variableDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDeclaration" ):
                listener.enterVariableDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDeclaration" ):
                listener.exitVariableDeclaration(self)




    def variableDeclaration(self):

        localctx = CalculatorParser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_variableDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(CalculatorParser.IDENTIFIER)
            self.state = 82
            self.match(CalculatorParser.ASSIGN_OP)
            self.state = 83
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstantDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONST(self):
            return self.getToken(CalculatorParser.CONST, 0)

        def IDENTIFIER(self):
            return self.getToken(CalculatorParser.IDENTIFIER, 0)

        def ASSIGN_OP(self):
            return self.getToken(CalculatorParser.ASSIGN_OP, 0)

        def expression(self):
            return self.getTypedRuleContext(CalculatorParser.ExpressionContext,0)


        def getRuleIndex(self):
            return CalculatorParser.RULE_constantDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstantDeclaration" ):
                listener.enterConstantDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstantDeclaration" ):
                listener.exitConstantDeclaration(self)




    def constantDeclaration(self):

        localctx = CalculatorParser.ConstantDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_constantDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(CalculatorParser.CONST)
            self.state = 86
            self.match(CalculatorParser.IDENTIFIER)
            self.state = 87
            self.match(CalculatorParser.ASSIGN_OP)
            self.state = 88
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def multiplicativeExpression(self):
            return self.getTypedRuleContext(CalculatorParser.MultiplicativeExpressionContext,0)


        def getRuleIndex(self):
            return CalculatorParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = CalculatorParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.multiplicativeExpression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MultiplicativeExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def additiveExpression(self):
            return self.getTypedRuleContext(CalculatorParser.AdditiveExpressionContext,0)


        def multiplicativeExpression(self):
            return self.getTypedRuleContext(CalculatorParser.MultiplicativeExpressionContext,0)


        def multiplicativeOperator(self):
            return self.getTypedRuleContext(CalculatorParser.MultiplicativeOperatorContext,0)


        def getRuleIndex(self):
            return CalculatorParser.RULE_multiplicativeExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultiplicativeExpression" ):
                listener.enterMultiplicativeExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultiplicativeExpression" ):
                listener.exitMultiplicativeExpression(self)



    def multiplicativeExpression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = CalculatorParser.MultiplicativeExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_multiplicativeExpression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.additiveExpression(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 101
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = CalculatorParser.MultiplicativeExpressionContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_multiplicativeExpression)
                    self.state = 95
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 96
                    self.multiplicativeOperator()
                    self.state = 97
                    self.additiveExpression(0) 
                self.state = 103
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class MultiplicativeOperatorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MUL_OP(self):
            return self.getToken(CalculatorParser.MUL_OP, 0)

        def DIV_OP(self):
            return self.getToken(CalculatorParser.DIV_OP, 0)

        def getRuleIndex(self):
            return CalculatorParser.RULE_multiplicativeOperator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultiplicativeOperator" ):
                listener.enterMultiplicativeOperator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultiplicativeOperator" ):
                listener.exitMultiplicativeOperator(self)




    def multiplicativeOperator(self):

        localctx = CalculatorParser.MultiplicativeOperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_multiplicativeOperator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            _la = self._input.LA(1)
            if not(_la==CalculatorParser.MUL_OP or _la==CalculatorParser.DIV_OP):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AdditiveExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primaryExpression(self):
            return self.getTypedRuleContext(CalculatorParser.PrimaryExpressionContext,0)


        def additiveExpression(self):
            return self.getTypedRuleContext(CalculatorParser.AdditiveExpressionContext,0)


        def additiveOperator(self):
            return self.getTypedRuleContext(CalculatorParser.AdditiveOperatorContext,0)


        def getRuleIndex(self):
            return CalculatorParser.RULE_additiveExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAdditiveExpression" ):
                listener.enterAdditiveExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAdditiveExpression" ):
                listener.exitAdditiveExpression(self)



    def additiveExpression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = CalculatorParser.AdditiveExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 22
        self.enterRecursionRule(localctx, 22, self.RULE_additiveExpression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.primaryExpression()
            self._ctx.stop = self._input.LT(-1)
            self.state = 115
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = CalculatorParser.AdditiveExpressionContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_additiveExpression)
                    self.state = 109
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 110
                    self.additiveOperator()
                    self.state = 111
                    self.primaryExpression() 
                self.state = 117
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class AdditiveOperatorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ADD_OP(self):
            return self.getToken(CalculatorParser.ADD_OP, 0)

        def SUB_OP(self):
            return self.getToken(CalculatorParser.SUB_OP, 0)

        def getRuleIndex(self):
            return CalculatorParser.RULE_additiveOperator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAdditiveOperator" ):
                listener.enterAdditiveOperator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAdditiveOperator" ):
                listener.exitAdditiveOperator(self)




    def additiveOperator(self):

        localctx = CalculatorParser.AdditiveOperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_additiveOperator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            _la = self._input.LA(1)
            if not(_la==CalculatorParser.ADD_OP or _la==CalculatorParser.SUB_OP):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrimaryExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parenthesizedExpression(self):
            return self.getTypedRuleContext(CalculatorParser.ParenthesizedExpressionContext,0)


        def functionExpression(self):
            return self.getTypedRuleContext(CalculatorParser.FunctionExpressionContext,0)


        def variableExpression(self):
            return self.getTypedRuleContext(CalculatorParser.VariableExpressionContext,0)


        def literalExpression(self):
            return self.getTypedRuleContext(CalculatorParser.LiteralExpressionContext,0)


        def getRuleIndex(self):
            return CalculatorParser.RULE_primaryExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimaryExpression" ):
                listener.enterPrimaryExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimaryExpression" ):
                listener.exitPrimaryExpression(self)




    def primaryExpression(self):

        localctx = CalculatorParser.PrimaryExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_primaryExpression)
        try:
            self.state = 124
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 120
                self.parenthesizedExpression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 121
                self.functionExpression()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 122
                self.variableExpression()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 123
                self.literalExpression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParenthesizedExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PAREN_OPEN(self):
            return self.getToken(CalculatorParser.PAREN_OPEN, 0)

        def multiplicativeExpression(self):
            return self.getTypedRuleContext(CalculatorParser.MultiplicativeExpressionContext,0)


        def PAREN_CLOSE(self):
            return self.getToken(CalculatorParser.PAREN_CLOSE, 0)

        def getRuleIndex(self):
            return CalculatorParser.RULE_parenthesizedExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParenthesizedExpression" ):
                listener.enterParenthesizedExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParenthesizedExpression" ):
                listener.exitParenthesizedExpression(self)




    def parenthesizedExpression(self):

        localctx = CalculatorParser.ParenthesizedExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_parenthesizedExpression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(CalculatorParser.PAREN_OPEN)
            self.state = 127
            self.multiplicativeExpression(0)
            self.state = 128
            self.match(CalculatorParser.PAREN_CLOSE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(CalculatorParser.IDENTIFIER, 0)

        def functionArguments(self):
            return self.getTypedRuleContext(CalculatorParser.FunctionArgumentsContext,0)


        def getRuleIndex(self):
            return CalculatorParser.RULE_functionExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionExpression" ):
                listener.enterFunctionExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionExpression" ):
                listener.exitFunctionExpression(self)




    def functionExpression(self):

        localctx = CalculatorParser.FunctionExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_functionExpression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(CalculatorParser.IDENTIFIER)
            self.state = 131
            self.functionArguments()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionArgumentsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PAREN_OPEN(self):
            return self.getToken(CalculatorParser.PAREN_OPEN, 0)

        def PAREN_CLOSE(self):
            return self.getToken(CalculatorParser.PAREN_CLOSE, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CalculatorParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(CalculatorParser.ExpressionContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CalculatorParser.COMMA)
            else:
                return self.getToken(CalculatorParser.COMMA, i)

        def getRuleIndex(self):
            return CalculatorParser.RULE_functionArguments

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionArguments" ):
                listener.enterFunctionArguments(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionArguments" ):
                listener.exitFunctionArguments(self)




    def functionArguments(self):
